Fixed header width on mobile

--- a/www/css/common.css
+++ b/www/css/common.css
@@ -6,6 +6,7 @@ body {
     font-family: "Open Sans",arial,sans-serif;
     padding: 0px;
     background-color: #eee;
+    min-width: 1120px;
 }
 
 h2 {
@@ -16,9 +17,6 @@ h2 {
     font-weight: 400;
 }
 
-#heading {
-    width: 100%;
-}
 
 #logoContainer {
     padding: 20px;
@@ -34,6 +32,7 @@ h2 {
     position: absolute;
     top: 100px;
     width: 100%;
+    min-width: 1120px; 
     background-color: #2d2d2d;
     padding: 5px 0 5px 0;
     z-index: 1000;
